inter05.output
Terminales no usados en la gramática

   LET


Estado 81 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: prog $end

    1 prog: progelem
    2     | prog progelem

    3 progelem: statement '\n'
    4         | '\n'

    5 statement: IDENT '=' ternary
    6          | PRINT '(' ternary ')'
    7          | PRINT '(' STR ')'
    8          | PRINT '(' STR '-' ternary ')'
    9          | READ '(' IDENT ')'
   10          | READ '(' STR '-' IDENT ')'

   11 ternary: ternary '?' ternary ':' ternary
   12        | expr

   13 expr: expr OR expr
   14     | expr AND expr
   15     | expr EQ expr
   16     | expr NE expr
   17     | expr LE expr
   18     | expr GE expr
   19     | expr '<' expr
   20     | expr '>' expr
   21     | expr '+' expr
   22     | expr '-' expr
   23     | expr '*' expr
   24     | expr '/' expr
   25     | expr '^' expr
   26     | '!' expr
   27     | '+' expr
   28     | '-' expr
   29     | '(' ternary ')'
   30     | FLOAT
   31     | IDENT
   32     | SIN '(' ternary ')'
   33     | COS '(' ternary ')'
   34     | TAN '(' ternary ')'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4
'!' (33) 26
'(' (40) 6 7 8 9 10 29 32 33 34
')' (41) 6 7 8 9 10 29 32 33 34
'*' (42) 23
'+' (43) 21 27
'-' (45) 8 10 22 28
'/' (47) 24
':' (58) 11
'<' (60) 19
'=' (61) 5
'>' (62) 20
'?' (63) 11
'^' (94) 25
error (256)
OR (258) 13
AND (259) 14
EQ (260) 15
NE (261) 16
LE (262) 17
GE (263) 18
UNOP (264)
IDENT <s> (265) 5 9 10 31
LET (266)
PRINT (267) 6 7 8
SIN (268) 32
COS (269) 33
TAN (270) 34
READ (271) 9 10
FLOAT <s> (272) 30
STR <s> (273) 7 8 10


No terminales con las reglas donde aparecen

$accept (33)
    en la izquierda: 0
prog <s> (34)
    en la izquierda: 1 2, en la derecha: 0 2
progelem <s> (35)
    en la izquierda: 3 4, en la derecha: 1 2
statement <s> (36)
    en la izquierda: 5 6 7 8 9 10, en la derecha: 3
ternary <s> (37)
    en la izquierda: 11 12, en la derecha: 5 6 8 11 29 32 33 34
expr <s> (38)
    en la izquierda: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34, en la derecha: 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26 27 28


Estado 0

    0 $accept: . prog $end

    IDENT  desplazar e ir al estado 1
    PRINT  desplazar e ir al estado 2
    READ   desplazar e ir al estado 3
    '\n'   desplazar e ir al estado 4

    prog       ir al estado 5
    progelem   ir al estado 6
    statement  ir al estado 7


Estado 1

    5 statement: IDENT . '=' ternary

    '='  desplazar e ir al estado 8


Estado 2

    6 statement: PRINT . '(' ternary ')'
    7          | PRINT . '(' STR ')'
    8          | PRINT . '(' STR '-' ternary ')'

    '('  desplazar e ir al estado 9


Estado 3

    9 statement: READ . '(' IDENT ')'
   10          | READ . '(' STR '-' IDENT ')'

    '('  desplazar e ir al estado 10


Estado 4

    4 progelem: '\n' .

    $default  reduce usando la regla 4 (progelem)


Estado 5

    0 $accept: prog . $end
    2 prog: prog . progelem

    $end   desplazar e ir al estado 11
    IDENT  desplazar e ir al estado 1
    PRINT  desplazar e ir al estado 2
    READ   desplazar e ir al estado 3
    '\n'   desplazar e ir al estado 4

    progelem   ir al estado 12
    statement  ir al estado 7


Estado 6

    1 prog: progelem .

    $default  reduce usando la regla 1 (prog)


Estado 7

    3 progelem: statement . '\n'

    '\n'  desplazar e ir al estado 13


Estado 8

    5 statement: IDENT '=' . ternary

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 23
    expr     ir al estado 24


Estado 9

    6 statement: PRINT '(' . ternary ')'
    7          | PRINT '(' . STR ')'
    8          | PRINT '(' . STR '-' ternary ')'

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    STR    desplazar e ir al estado 25
    '('    desplazar e ir al estado 22

    ternary  ir al estado 26
    expr     ir al estado 24


Estado 10

    9 statement: READ '(' . IDENT ')'
   10          | READ '(' . STR '-' IDENT ')'

    IDENT  desplazar e ir al estado 27
    STR    desplazar e ir al estado 28


Estado 11

    0 $accept: prog $end .

    $default  aceptar


Estado 12

    2 prog: prog progelem .

    $default  reduce usando la regla 2 (prog)


Estado 13

    3 progelem: statement '\n' .

    $default  reduce usando la regla 3 (progelem)


Estado 14

   27 expr: '+' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 29


Estado 15

   28 expr: '-' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 30


Estado 16

   26 expr: '!' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 31


Estado 17

   31 expr: IDENT .

    $default  reduce usando la regla 31 (expr)


Estado 18

   32 expr: SIN . '(' ternary ')'

    '('  desplazar e ir al estado 32


Estado 19

   33 expr: COS . '(' ternary ')'

    '('  desplazar e ir al estado 33


Estado 20

   34 expr: TAN . '(' ternary ')'

    '('  desplazar e ir al estado 34


Estado 21

   30 expr: FLOAT .

    $default  reduce usando la regla 30 (expr)


Estado 22

   29 expr: '(' . ternary ')'

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 35
    expr     ir al estado 24


Estado 23

    5 statement: IDENT '=' ternary .
   11 ternary: ternary . '?' ternary ':' ternary

    '?'  desplazar e ir al estado 36

    $default  reduce usando la regla 5 (statement)


Estado 24

   12 ternary: expr .
   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    OR   desplazar e ir al estado 37
    AND  desplazar e ir al estado 38
    EQ   desplazar e ir al estado 39
    NE   desplazar e ir al estado 40
    LE   desplazar e ir al estado 41
    GE   desplazar e ir al estado 42
    '<'  desplazar e ir al estado 43
    '>'  desplazar e ir al estado 44
    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 12 (ternary)


Estado 25

    7 statement: PRINT '(' STR . ')'
    8          | PRINT '(' STR . '-' ternary ')'

    '-'  desplazar e ir al estado 50
    ')'  desplazar e ir al estado 51


Estado 26

    6 statement: PRINT '(' ternary . ')'
   11 ternary: ternary . '?' ternary ':' ternary

    ')'  desplazar e ir al estado 52
    '?'  desplazar e ir al estado 36


Estado 27

    9 statement: READ '(' IDENT . ')'

    ')'  desplazar e ir al estado 53


Estado 28

   10 statement: READ '(' STR . '-' IDENT ')'

    '-'  desplazar e ir al estado 54


Estado 29

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   27     | '+' expr .

    $default  reduce usando la regla 27 (expr)


Estado 30

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   28     | '-' expr .

    $default  reduce usando la regla 28 (expr)


Estado 31

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   26     | '!' expr .

    $default  reduce usando la regla 26 (expr)


Estado 32

   32 expr: SIN '(' . ternary ')'

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 55
    expr     ir al estado 24


Estado 33

   33 expr: COS '(' . ternary ')'

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 56
    expr     ir al estado 24


Estado 34

   34 expr: TAN '(' . ternary ')'

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 57
    expr     ir al estado 24


Estado 35

   11 ternary: ternary . '?' ternary ':' ternary
   29 expr: '(' ternary . ')'

    ')'  desplazar e ir al estado 58
    '?'  desplazar e ir al estado 36


Estado 36

   11 ternary: ternary '?' . ternary ':' ternary

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 59
    expr     ir al estado 24


Estado 37

   13 expr: expr OR . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 60


Estado 38

   14 expr: expr AND . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 61


Estado 39

   15 expr: expr EQ . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 62


Estado 40

   16 expr: expr NE . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 63


Estado 41

   17 expr: expr LE . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 64


Estado 42

   18 expr: expr GE . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 65


Estado 43

   19 expr: expr '<' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 66


Estado 44

   20 expr: expr '>' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 67


Estado 45

   21 expr: expr '+' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 68


Estado 46

   22 expr: expr '-' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 69


Estado 47

   23 expr: expr '*' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 70


Estado 48

   24 expr: expr '/' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 71


Estado 49

   25 expr: expr '^' . expr

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    expr  ir al estado 72


Estado 50

    8 statement: PRINT '(' STR '-' . ternary ')'

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 73
    expr     ir al estado 24


Estado 51

    7 statement: PRINT '(' STR ')' .

    $default  reduce usando la regla 7 (statement)


Estado 52

    6 statement: PRINT '(' ternary ')' .

    $default  reduce usando la regla 6 (statement)


Estado 53

    9 statement: READ '(' IDENT ')' .

    $default  reduce usando la regla 9 (statement)


Estado 54

   10 statement: READ '(' STR '-' . IDENT ')'

    IDENT  desplazar e ir al estado 74


Estado 55

   11 ternary: ternary . '?' ternary ':' ternary
   32 expr: SIN '(' ternary . ')'

    ')'  desplazar e ir al estado 75
    '?'  desplazar e ir al estado 36


Estado 56

   11 ternary: ternary . '?' ternary ':' ternary
   33 expr: COS '(' ternary . ')'

    ')'  desplazar e ir al estado 76
    '?'  desplazar e ir al estado 36


Estado 57

   11 ternary: ternary . '?' ternary ':' ternary
   34 expr: TAN '(' ternary . ')'

    ')'  desplazar e ir al estado 77
    '?'  desplazar e ir al estado 36


Estado 58

   29 expr: '(' ternary ')' .

    $default  reduce usando la regla 29 (expr)


Estado 59

   11 ternary: ternary . '?' ternary ':' ternary
   11        | ternary '?' ternary . ':' ternary

    '?'  desplazar e ir al estado 36
    ':'  desplazar e ir al estado 78


Estado 60

   13 expr: expr . OR expr
   13     | expr OR expr .
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    AND  desplazar e ir al estado 38
    EQ   desplazar e ir al estado 39
    NE   desplazar e ir al estado 40
    LE   desplazar e ir al estado 41
    GE   desplazar e ir al estado 42
    '<'  desplazar e ir al estado 43
    '>'  desplazar e ir al estado 44
    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 13 (expr)


Estado 61

   13 expr: expr . OR expr
   14     | expr . AND expr
   14     | expr AND expr .
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    EQ   desplazar e ir al estado 39
    NE   desplazar e ir al estado 40
    LE   desplazar e ir al estado 41
    GE   desplazar e ir al estado 42
    '<'  desplazar e ir al estado 43
    '>'  desplazar e ir al estado 44
    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 14 (expr)


Estado 62

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   15     | expr EQ expr .
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    LE   desplazar e ir al estado 41
    GE   desplazar e ir al estado 42
    '<'  desplazar e ir al estado 43
    '>'  desplazar e ir al estado 44
    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    EQ  error (no asociativo)
    NE  error (no asociativo)

    $default  reduce usando la regla 15 (expr)


Estado 63

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   16     | expr NE expr .
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    LE   desplazar e ir al estado 41
    GE   desplazar e ir al estado 42
    '<'  desplazar e ir al estado 43
    '>'  desplazar e ir al estado 44
    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    EQ  error (no asociativo)
    NE  error (no asociativo)

    $default  reduce usando la regla 16 (expr)


Estado 64

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   17     | expr LE expr .
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    LE   error (no asociativo)
    GE   error (no asociativo)
    '<'  error (no asociativo)
    '>'  error (no asociativo)

    $default  reduce usando la regla 17 (expr)


Estado 65

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   18     | expr GE expr .
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    LE   error (no asociativo)
    GE   error (no asociativo)
    '<'  error (no asociativo)
    '>'  error (no asociativo)

    $default  reduce usando la regla 18 (expr)


Estado 66

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   19     | expr '<' expr .
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    LE   error (no asociativo)
    GE   error (no asociativo)
    '<'  error (no asociativo)
    '>'  error (no asociativo)

    $default  reduce usando la regla 19 (expr)


Estado 67

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   20     | expr '>' expr .
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '+'  desplazar e ir al estado 45
    '-'  desplazar e ir al estado 46
    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    LE   error (no asociativo)
    GE   error (no asociativo)
    '<'  error (no asociativo)
    '>'  error (no asociativo)

    $default  reduce usando la regla 20 (expr)


Estado 68

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   21     | expr '+' expr .
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 21 (expr)


Estado 69

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   22     | expr '-' expr .
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr

    '*'  desplazar e ir al estado 47
    '/'  desplazar e ir al estado 48
    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 22 (expr)


Estado 70

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   23     | expr '*' expr .
   24     | expr . '/' expr
   25     | expr . '^' expr

    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 23 (expr)


Estado 71

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   24     | expr '/' expr .
   25     | expr . '^' expr

    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 24 (expr)


Estado 72

   13 expr: expr . OR expr
   14     | expr . AND expr
   15     | expr . EQ expr
   16     | expr . NE expr
   17     | expr . LE expr
   18     | expr . GE expr
   19     | expr . '<' expr
   20     | expr . '>' expr
   21     | expr . '+' expr
   22     | expr . '-' expr
   23     | expr . '*' expr
   24     | expr . '/' expr
   25     | expr . '^' expr
   25     | expr '^' expr .

    '^'  desplazar e ir al estado 49

    $default  reduce usando la regla 25 (expr)


Estado 73

    8 statement: PRINT '(' STR '-' ternary . ')'
   11 ternary: ternary . '?' ternary ':' ternary

    ')'  desplazar e ir al estado 79
    '?'  desplazar e ir al estado 36


Estado 74

   10 statement: READ '(' STR '-' IDENT . ')'

    ')'  desplazar e ir al estado 80


Estado 75

   32 expr: SIN '(' ternary ')' .

    $default  reduce usando la regla 32 (expr)


Estado 76

   33 expr: COS '(' ternary ')' .

    $default  reduce usando la regla 33 (expr)


Estado 77

   34 expr: TAN '(' ternary ')' .

    $default  reduce usando la regla 34 (expr)


Estado 78

   11 ternary: ternary '?' ternary ':' . ternary

    '+'    desplazar e ir al estado 14
    '-'    desplazar e ir al estado 15
    '!'    desplazar e ir al estado 16
    IDENT  desplazar e ir al estado 17
    SIN    desplazar e ir al estado 18
    COS    desplazar e ir al estado 19
    TAN    desplazar e ir al estado 20
    FLOAT  desplazar e ir al estado 21
    '('    desplazar e ir al estado 22

    ternary  ir al estado 81
    expr     ir al estado 24


Estado 79

    8 statement: PRINT '(' STR '-' ternary ')' .

    $default  reduce usando la regla 8 (statement)


Estado 80

   10 statement: READ '(' STR '-' IDENT ')' .

    $default  reduce usando la regla 10 (statement)


Estado 81

   11 ternary: ternary . '?' ternary ':' ternary
   11        | ternary '?' ternary ':' ternary .

    '?'  desplazar e ir al estado 36

    '?'       [reduce usando la regla 11 (ternary)]
    $default  reduce usando la regla 11 (ternary)
